--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #222;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-  }
+  font-family: 'Consolas', monospace;
+  background-color: #222;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+}
   
   .container {
     max-width: 800px;
