--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body, html {
   height: 100%;
   width: 100%; /* Ensure container takes full width */
   padding: 20px;
+  margin-top: -300px; 
   box-sizing: border-box;
 }
 
