--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ body, html {
 
   h1 {
     font-size: 1.5em; /* Adjust heading size for smaller screens */
+    align-items: center;
   }
 
   p {
