--- a/index.css
+++ b/index.css
@@ -2,8 +2,8 @@ body, html {
   height: 100%;
   margin: 0;
   font-family: 'Tahoma', sans-serif;
-  background-color: #fff; /* White background for better readability */
-  color: #000; /* Black text color for contrast */
+  background-color: #2c2c2c; /* Dark grey background */
+  color: #fff; /* White text color */
 }
 
 .container {
@@ -14,26 +14,47 @@ body, html {
   height: 100%;
   width: 100%; /* Ensure container takes full width */
   padding: 20px;
-  margin-top: -250px; 
   box-sizing: border-box;
+  margin-top: -300px;
+  text-align: center; /* Center text in the container */
+}
+
+nav {
+  background-color: #333; /* Slightly darker grey for nav */
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
+  border-radius: 8px; /* Rounded corners */
+  border: 2px solid #007ba7; /* Cerulean blue border for accent */
+}
+
+h1 {
+  font-size: 2em;
+  color: #007ba7; /* Cerulean blue color for the heading */
+  margin-bottom: 10px; /* Add some space below the heading */
+}
+
+p {
+  font-size: 1.2em;
+  color: #fff; /* White text color */
+  margin: 0;
 }
 
 /* Adjustments for smaller screens */
 @media only screen and (max-width: 600px) {
   .container {
-    padding: 20px; /* Add padding for smaller screens */
+    padding: 10px; /* Add padding for smaller screens */
     margin-top: 0; /* Adjust margin for smaller screens */
-    flex-direction: column; /* Stack items vertically for smaller screens */
-    align-items: flex-start; /* Align items to the start (left) */
+    text-align: left; /* Left-align text for mobile */
   }
 
   nav {
     width: 100%; /* Make nav take the full width */
     margin-top: 10px; /* Reduce margin for smaller screens */
+    padding: 15px; /* Adjust padding for smaller screens */
   }
 
   h1 {
-    font-size: 1.5em; /* Adjust heading size for smaller screens */
+    font-size: 1.8em; /* Adjust heading size for smaller screens */
   }
 
   p {
