adding coming soon

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ nav {
 
 h1 {
   font-size: 2em;
-  color: #007ba7; /* Cerulean blue color for the heading */
+  color: #ffffff; /* Cerulean blue color for the heading */
   margin-bottom: 10px; /* Add some space below the heading */
 }
 
