--- a/index.css
+++ b/index.css
@@ -21,12 +21,11 @@ body, html {
 
 nav {
   padding: 20px;
-
 }
 
 h1 {
   font-size: 2em;
-  color: #ffffff; /* Cerulean blue color for the heading */
+  color: #ffffff; /
   margin-bottom: 10px; /* Add some space below the heading */
 }
 
@@ -34,6 +33,25 @@ p {
   font-size: 1.2em;
   color: #fff; /* White text color */
   margin: 0;
+}
+
+.coming-soon {
+  position: absolute;
+  bottom: 50px;
+  left: 20px;
+  text-align: left;
+}
+
+.coming-soon h2 {
+  font-size: 1.5em;
+  margin-bottom: 5px;
+  color: #1cb41c; 
+}
+
+.unclickable-link {
+  font-size: 1.2em;
+  color: #fff; /* White text color */
+  text-decoration: underline;
 }
 
 /* Adjustments for smaller screens */
@@ -55,6 +73,19 @@ p {
   }
 
   p {
+    font-size: 1em; /* Adjust paragraph size for smaller screens */
+  }
+
+  .coming-soon {
+    left: 10px; /* Adjust position for smaller screens */
+    bottom: 10px;
+  }
+
+  .coming-soon h2 {
+    font-size: 1.3em; /* Adjust heading size for smaller screens */
+  }
+
+  .unclickable-link {
     font-size: 1em; /* Adjust paragraph size for smaller screens */
   }
 }
