--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ p {
   }
 
   .coming-soon {
-    left: 10px; /* Adjust position for smaller screens */
+    left: 10px; /* Adjust position for smaller screen */
     bottom: 10px;
   }
 
