--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ nav {
 
 h1 {
   font-size: 2em;
-  color: #ffffff; /
+  color: #ffffff; /* White color for the heading */
   margin-bottom: 10px; /* Add some space below the heading */
 }
 
@@ -45,13 +45,26 @@ p {
 .coming-soon h2 {
   font-size: 1.5em;
   margin-bottom: 5px;
-  color: #1cb41c; 
+  color: #1cb41c; /* Cerulean blue color for the heading */
 }
 
 .unclickable-link {
   font-size: 1.2em;
   color: #fff; /* White text color */
   text-decoration: underline;
+}
+
+.privacy-policy {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  text-align: right;
+}
+
+.privacy-policy p {
+  font-size: 1em;
+  color: #7d7d7d; /* Greyed out text color */
+  margin: 0;
 }
 
 /* Adjustments for smaller screens */
@@ -77,7 +90,7 @@ p {
   }
 
   .coming-soon {
-    left: 10px; /* Adjust position for smaller screen */
+    left: 10px; /* Adjust position for smaller screens */
     bottom: 10px;
   }
 
@@ -87,5 +100,14 @@ p {
 
   .unclickable-link {
     font-size: 1em; /* Adjust paragraph size for smaller screens */
+  }
+
+  .privacy-policy {
+    right: 10px; /* Adjust position for smaller screens */
+    bottom: 10px;
+  }
+
+  .privacy-policy p {
+    font-size: 0.8em; /* Adjust paragraph size for smaller screens */
   }
 }
