--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/* General body styles */
 body, html {
   height: 100%;
   margin: 0;
@@ -6,6 +7,7 @@ body, html {
   color: #fff; /* White text color */
 }
 
+/* Container styles */
 .container {
   display: flex;
   flex-direction: column;
@@ -19,22 +21,26 @@ body, html {
   text-align: center; /* Center text in the container */
 }
 
+/* Navigation styles */
 nav {
   padding: 20px;
 }
 
+/* Heading styles */
 h1 {
   font-size: 2em;
   color: #ffffff; /* White color for the heading */
   margin-bottom: 10px; /* Add some space below the heading */
 }
 
+/* Paragraph styles */
 p {
   font-size: 1.2em;
   color: #fff; /* White text color */
   margin: 0;
 }
 
+/* Coming soon section styles */
 .coming-soon {
   position: absolute;
   bottom: 50px;
@@ -54,6 +60,25 @@ p {
   text-decoration: underline;
 }
 
+/* Contact link styles */
+.contact-link {
+  position: absolute;
+  bottom: 45px;
+  right: 20px;
+  text-align: right;
+}
+
+.contact-link a {
+  font-size: 1em;
+  color: #fff;
+  text-decoration: none;
+}
+
+.contact-link a:hover {
+  text-decoration: underline;
+}
+
+/* Privacy policy link styles */
 .privacy-policy {
   position: absolute;
   bottom: 20px;
@@ -61,13 +86,35 @@ p {
   text-align: right;
 }
 
-.privacy-policy p {
+.privacy-policy a {
   font-size: 1em;
-  color: #7d7d7d; /* Greyed out text color */
-  margin: 0;
+  color: #fff;
+  text-decoration: none;
 }
 
-/* Adjustments for smaller screens */
+.privacy-policy a:hover {
+  text-decoration: underline;
+}
+
+/* Back to home link styles */
+.back-link {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  text-align: left;
+}
+
+.back-link a {
+  font-size: 1em;
+  color: #fff;
+  text-decoration: none;
+}
+
+.back-link a:hover {
+  text-decoration: underline;
+}
+
+/* Responsive adjustments */
 @media only screen and (max-width: 600px) {
   .container {
     padding: 10px; /* Add padding for smaller screens */
@@ -102,12 +149,19 @@ p {
     font-size: 1em; /* Adjust paragraph size for smaller screens */
   }
 
-  .privacy-policy {
+  .contact-link, .privacy-policy {
     right: 10px; /* Adjust position for smaller screens */
-    bottom: 10px;
   }
 
-  .privacy-policy p {
-    font-size: 0.8em; /* Adjust paragraph size for smaller screens */
+  .contact-link a, .privacy-policy a {
+    font-size: 0.9em; /* Adjust font size for smaller screens */
+  }
+
+  .back-link {
+    left: 10px; /* Adjust position for smaller screens */
+  }
+
+  .back-link a {
+    font-size: 0.8em; /* Adjust font size for smaller screens */
   }
 }
